--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: Bebas;
+    src: url(../fonts/bebas.ttf);
+  }
+
+body{
+    font-family: Bebas;
+}
+
 .footer {
   position: fixed;
   bottom: 0;
