--- a/src/components/HeaderHome/header.css
+++ b/src/components/HeaderHome/header.css
@@ -1,14 +1,11 @@
 
 .Header{
-    color: #29a9e1 !important;
+    color: red;
     background-color: #030819;
-
 }
 
 li {
     list-style: none !important;
-    font-size: 2rem;
-    padding-right: 1.3rem;
 }
 
 
