--- a/src/stories/index.css
+++ b/src/stories/index.css
@@ -53,3 +53,9 @@ select{
     bottom: 10%;
     width: 95%;
 }
+.div-bottom-2{
+    position: absolute;
+    bottom: 10%;
+    width: 45%;
+    left: 28%;
+}
