--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -1,3 +1,24 @@
 .parrafo{
     font-size: 6rem;
+    position: absolute;
+    top:30%;
+    left: 15%;
+    width: 100%;
 }
+
+.parrafo-2{
+    font-size: 6rem;
+    position: absolute;
+    top:45%;
+    left: 15%;
+    width: 100%;
+}
+
+.img-slider{
+    z-index: 1;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+
