--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,8 +1,18 @@
 .logo{
-    width: 200px;
+    width: 120px;
     height: auto;
 }
 
 .navbar{
-    height: 160px;
+    height: 100px;
+    z-index: 1;
+}
+
+.navbar-light .navbar-nav .nav-link{
+    font-size: 1.6rem;
+}
+
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover{
+    font-size: 1.8rem;
+    color: black;
 }
