--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -1,3 +1,10 @@
+.Slider{
+    z-index: 0;
+}
+.aws-sld, .aws-sld__wrapper{
+    height: 90vh !important;
+}
+
 .parrafo{
     font-size: 6rem;
     position: absolute;
@@ -22,3 +29,6 @@
 }
 
 
+.carousel-item{
+    height: 90vh !important;
+} 
